[gd_scene load_steps=4 format=2]

[ext_resource path="res://UI/PauseMenu.gd" type="Script" id=1]
[ext_resource path="res://assets/font/Xolonium-Regular.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 2 )

[node name="PauseMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.219608, 0.211765, 0.211765, 0.784314 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 494.0
margin_top = 238.0
margin_right = 785.0
margin_bottom = 482.0
custom_constants/separation = 10

[node name="TextPause" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 291.0
margin_bottom = 39.0
custom_fonts/font = SubResource( 1 )
text = "GAME_PAUSED"
align = 1
valign = 1

[node name="Control" type="Control" parent="CenterContainer/VBoxContainer"]
margin_top = 49.0
margin_right = 291.0
margin_bottom = 59.0
rect_min_size = Vector2( 0, 10 )

[node name="ResumeButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 69.0
margin_right = 291.0
margin_bottom = 114.0
custom_fonts/font = SubResource( 1 )
text = "RESUME_GAME"

[node name="MenuButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 124.0
margin_right = 291.0
margin_bottom = 169.0
custom_fonts/font = SubResource( 1 )
text = "EXIT_TO_MENU"

[node name="Control2" type="Control" parent="CenterContainer/VBoxContainer"]
margin_top = 179.0
margin_right = 291.0
margin_bottom = 189.0
rect_min_size = Vector2( 0, 10 )

[node name="ExitButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 199.0
margin_right = 291.0
margin_bottom = 244.0
custom_fonts/font = SubResource( 1 )
text = "EXIT_GAME"

[connection signal="pressed" from="CenterContainer/VBoxContainer/ResumeButton" to="." method="_on_ResumeButton_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/MenuButton" to="." method="_on_MenuButton_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/ExitButton" to="." method="_on_ExitButton_pressed"]
